--- a/sistema/templates/registro_funcionario.html
+++ b/sistema/templates/registro_funcionario.html
@@ -1,17 +1,28 @@
 {% extends 'base.html' %}
-{% block title %}Cadastro de Cliente{% endblock %}
+{% load static %}
+{% block title %}Cadastro de Funcionário{% endblock %}
 {% block content %}
-<div class="row justify-content-center mt-5">
-  <div class="col-md-6">
-    <div class="card shadow-sm">
-      <div class="card-body p-4">
-        <h3 class="card-title text-center mb-4">Cadastro de Funcionario</h3>
-        <form method="post" novalidate>
-          {% csrf_token %}
-          {{ form.as_p }}
-          <button type="submit" class="btn btn-success w-100 mt-3">Cadastrar</button>
-        </form>
-      </div>
+<div class="d-flex flex-row min-vh-100">
+
+  <!-- Coluna Esquerda: Imagem e slogan -->
+  <div class="w-50 position-relative" style="background: url('{% static "img/fundo.png" %}') no-repeat center center; background-size: cover;">
+    <div class="position-relative d-flex flex-column justify-content-center align-items-center h-100 text-white p-5">
+      <img src="{% static 'img/slogan.png' %}" alt="Slogan" style="max-width: 80%; height: auto;">
+    </div>
+  </div>
+
+  <!-- Coluna Direita: Formulário -->
+  <div class="w-50 d-flex align-items-center justify-content-center bg-white">
+    <div class="w-75">
+
+      <h3 class="text-center mb-4">Cadastro de Funcionário</h3>
+
+      <form method="post" novalidate>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-success w-100 mt-3">Cadastrar</button>
+      </form>
+
     </div>
   </div>
 </div>
