--- a/sistema/templates/cliente_dashboard.html
+++ b/sistema/templates/cliente_dashboard.html
@@ -10,7 +10,7 @@
   <div class="text-white p-4 d-flex flex-column" style="width: 250px; background: url('{% static "img/fundo.png" %}') no-repeat center center; background-size: cover;">
     <!-- Slogan no topo -->
     <div class="mb-4 text-center">
-      <img src="{% static 'img/slogan.png' %}" alt="Slogan" class="img-fluid" style="max-height: 80px;">
+      <img src="{% static 'img/s.png' %}" alt="Slogan" class="img-fluid" style="max-height: 80px;">
     </div>
 
     <!-- Espaço flexível para centralizar o menu -->
