--- a/sistema/templates/login.html
+++ b/sistema/templates/login.html
@@ -17,7 +17,7 @@
     
     
     <!-- Slogan como imagem -->
-    <img src="{% static 'img/slogan.png' %}" alt="Slogan" class="img-fluid mt-3" style="max-width: 80%; height: auto;">
+    <img src="{% static 'img/s.png' %}" alt="Slogan" class="img-fluid mt-3" style="max-width: 80%; height: auto;">
     
   </div>
 </div>
