--- a/sistema/templates/registro_cliente.html
+++ b/sistema/templates/registro_cliente.html
@@ -7,7 +7,7 @@
   <!-- Coluna Esquerda: Imagem e slogan -->
   <div class="w-50 position-relative" style="background: url('{% static "img/fundo.png" %}') no-repeat center center; background-size: cover;">
     <div class="position-relative d-flex flex-column justify-content-center align-items-center h-100 text-white p-5">
-      <img src="{% static 'img/slogan.png' %}" alt="Slogan" style="max-width: 80%; height: auto;">
+      <img src="{% static 'img/s.png' %}" alt="Slogan" style="max-width: 80%; height: auto;">
     </div>
   </div>
 
