--- a/sistema/templates/base.html
+++ b/sistema/templates/base.html
@@ -2,19 +2,38 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Login - Sistema de Agendamento{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>{% block title %}Sistema de Agendamento{% endblock %}</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    
+    {% block extra_css %}
     <style>
         body, html {
             height: 100%;
             margin: 0;
+            background-color: #f8f9fa; /* Um cinza claro para o fundo geral */
+        }
+        /* Classe para efeito de hover no menu lateral */
+        .hover-bg-primary:hover {
+            background-color: #0d6efd; /* Cor primária do Bootstrap */
         }
     </style>
+    {% endblock %}
+
 </head>
 <body>
 
-{% block content %}{% endblock %}
+{% block content %}
+{% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+{% block extra_js %}
+{% endblock %}
+
 </body>
 </html>
